FORCING JAVA 17