@@ -81,8 +81,14 @@
     </dependencies>
 
     <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+        <!-- 
+        **************** IMPORTANT NOTICE ****************
+        DO NOT CHANGE JAVA VERSION! THIS PROJECT REQUIRES JAVA 17!
+        Changing this version will break compatibility and functionality.
+        All team members must use Java 17 for development and deployment.
+        ************************************************** 
+        -->
+        <maven.compiler.release>17</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <javafx.version>21.0.2</javafx.version>
         <mainClass>org.esprit.main.NftMarketplaceApplication</mainClass>
@@ -95,9 +101,10 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
-                    <source>${maven.compiler.source}</source>
-                    <target>${maven.compiler.target}</target>
-
+                    <release>${maven.compiler.release}</release>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
